<resources>
    <string name="app_name">TnqGuru</string>
    <string name="eMail">Email</string>
    <string name="login">Logn</string>
    <string name="pls_login">Please Login To Join Conference</string>
    <string name="welcome_to">Welcome to</string>
    <string name="tnq_guru">Tnq Guru</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have">Dont have an account?</string>
    <string name="signup">Signup?</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>

    <string name="online_fees">Online Fees</string>
    <string name="offline_fees">Offline Fees</string>
    <string name="no_of_hours">No. of Hours</string>
    <string name="degree">Degree</string>

    <!--Qualification-->
    <string name="be">B.E</string>
    <string name="me">M.E</string>
    <string name="ms">M.S</string>
    <string name="btech">B.Tech</string>
    <string name="mtech">M.Tech</string>
    <string name="mphil">M.Phil</string>
    <string name="phd">PHD</string>
    <string name="ba">B.A</string>
    <string name="ma">M.A</string>
    <string name="bsc">BSC</string>
    <string name="msc">MSC</string>
    <string name="mca">MCA</string>
    <string name="bcom">B.Com</string>
    <string name="mcom">M.Com</string>
    <string name="others">Others</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="courses">
        <item>Select Courses</item>
        <item>Share Market For Begineers In Tamil-₹101/-</item>
        <item>Share Market For Begineers In English-₹101/-</item>
    </string-array>

    <string-array name="select_school">
        <item>Select School</item>
        <item>Middle/High</item>
        <item>Higher Secondary</item>
    </string-array>

    <string-array name="country">
        <item>Select Country</item>
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
        <item>Germany</item>
        <item>Japan</item>
    </string-array>

    <string-array name="total_exp">
        <item>Teaching Experience</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="indus_exp">
        <item>Industrial Experience</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="mode_class">
        <item>Mode Of Class</item>
        <item>Online</item>
        <item>Ofline</item>
        <item>Both</item>
    </string-array>

    <string-array name="pre_sub">
        <item>Select Subject</item>
        <item>Computer Science</item>
        <item>Maths</item>
        <item>Tmail</item>
        <item>English</item>
    </string-array>

    <string-array name="colg_type">
        <item>Select College</item>
        <item>UG</item>
        <item>PG</item>
    </string-array>

    <string-array name="colg_dept">
        <item>Select Department</item>
        <item>Arts</item>
        <item>Science</item>
        <item>Engineering</item>

    </string-array>


</resources>