<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".common.LoginActivity">

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textForgotAccount"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorTextIcons"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dontHaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have"
        android:layout_below="@id/btn_Login"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/ubuntu_regular"
        android:layout_marginTop="@dimen/ten_dp"
        />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dontHaveText"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ten_dp"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:fontFamily="@font/ubuntu_regular"
        />

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/welcome_to"
            android:textColor="@color/colorTextIcons"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/tnq_guru"
            android:textColor="@color/colorTextIcons"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textForgotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardSignIn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/fiften_sp" />

    <TextView
        android:id="@+id/textSignInLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/sign_in_your_account"
        android:textColor="@color/black"
        android:textSize="@dimen/seventeen_sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSignInLable"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="4dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp">

                <EditText
                    android:id="@+id/login_gmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="@string/eMail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="Password"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <include layout="@layout/fragment_social_signup"/>


</RelativeLayout>


    <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp">

                <EditText
                    android:id="@+id/login_gmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="@string/eMail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_login_gmail"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/ten_dp">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="Password"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/login" />

        </RelativeLayout>

        <include layout="@layout/fragment_social_signup"

            />-->
