<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/five_dp"
        android:layout_margin="@dimen/five_dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/three_dp"
            >

            <ImageView
                android:id="@+id/colgDegreeLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/degree"
                android:layout_marginTop="@dimen/eight_dp"
                />

            <TextView
                android:id="@+id/colgTextDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/colgDegreeLogo"
                android:layout_marginLeft="@dimen/eight_dp"
                android:text="@string/degree"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/eight_dp"
                />

            <TextView
                android:id="@+id/colgHeadDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B.A"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/twenty_dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/eight_dp"
                />

            <ImageView
                android:id="@+id/colgTimeLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/time"
                android:layout_below="@+id/colgTextDegree"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/colgTextHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_hours"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/colgTimeLogo"
                android:layout_below="@+id/colgTextDegree"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginLeft="@dimen/eight_dp"
                />

            <TextView
                android:id="@+id/colgHeadHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15 Hours"
                android:layout_alignParentRight="true"
                android:layout_below="@id/colgHeadDegree"
                android:layout_marginRight="@dimen/twenty_dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/colgOnlineLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/online"
                android:layout_below="@+id/colgTimeLogo"
                android:layout_marginTop="@dimen/ten_dp"
                />

            <TextView
                android:id="@+id/colgTextOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_fees"
                android:layout_below="@+id/colgTextHours"
                android:layout_toRightOf="@+id/colgOnlineLogo"
                android:layout_marginLeft="@dimen/eight_dp"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/ten_dp"
                />

            <TextView
                android:id="@+id/colgHeadOnlineFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/colgHeadHours"
                android:text="5000"
                android:layout_marginRight="@dimen/twenty_dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/ten_dp"
                />



            <ImageView
                android:id="@+id/colgOfflineLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/offline"
                android:layout_below="@+id/colgOnlineLogo"
                android:layout_marginTop="@dimen/ten_dp"
                />

            <TextView
                android:id="@+id/colgTextOfline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_fees"
                android:layout_below="@+id/colgTextOnline"
                android:layout_toRightOf="@+id/colgOfflineLogo"
                android:layout_marginLeft="@dimen/eight_dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/ten_dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/colgHeadOflineFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/colgHeadOnlineFees"
                android:text="6000"
                android:layout_marginRight="@dimen/twenty_dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/ten_dp"
                />






        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>